--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ html {
 .navbar h1 {
   color: #ff385c;
   font-size: 24px;
-  
+
   cursor: pointer;
 }
 
@@ -141,6 +141,10 @@ html {
 
 .sort-bar div {
   text-align: center;
+}
+
+.sort-bar div:hover{
+  transform: scale(1.1);
 }
 
 .sort-bar i {
