--- a/style.css
+++ b/style.css
@@ -264,6 +264,10 @@ img {
     font-size: 2rem;
 }
 
+.center i:hover {
+  transform: scale(1.3);
+}
+
 @media screen and (max-width: 940px) {
   .top-bar {
     display: flex;
