add hover effect for footer items

--- a/style.css
+++ b/style.css
@@ -255,8 +255,12 @@ img {
     padding-left: 1rem;
 }
 
-.footer li:hover {
+.footer li {
   cursor: pointer;
+}
+
+.footer li:hover {
+  color: #ff385c;
 }
 
 .center {
